@@ -285,3 +285,7 @@ Version History
     - Updated Windows UD device open for Python 3 compatibility.
     - Added timeout (in ms) functionality to the U12 read method.
     - Fixed the U12 rawPulseout method so that it waits for the device response.
+    - Changed struct pack and unpack function usage in modules. They are now
+      imported and used directly.
+    - Removed the skymote.py module. The SkyMote products did not make a
+      release.
